# zettai-ryouiki

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: logger.rs  main.rs  pixiv.rs  types.rs  utils.rs
