[package]
name = "zettai-ryouiki"
description = "A command-line application to download images from Pixiv."
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["pxseu"]

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"

[dependencies]
anyhow = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4.2.3", features = ["derive"] }
futures = "0.3"
chrono = "0.4"
